styles.css
/* ... */
#experiences .experience-item::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
  opacity: 0.9;
  z-index: -1;
}

#experiences .experiences-bottom .icon {
  height: 80px;
  width: 80px;
  margin-bottom: 20px;
}

#experiences .experience-item h2 {
  font-size: 2rem;
  color: white;
  margin-bottom: 10px;
  text-transform: uppercase;
}

#experiences .experience-item p {
  color: white;
  text-align: left;
}

/* End Of Experiences Section */

/* Projects Section */

#projects .projects {
  flex-direction: column;
  max-width: 1100px;
  margin: 0 auto;
  padding: 100px 0;
}

#projects .projects-header {
  align-items: center;
}

#projects .projects-header h1 {
  margin-bottom: 50px;
}

#projects .all-projects {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#projects .project-item {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 80%;
  margin: 20px auto;
  overflow: hidden;
  border-radius: 10px;
}

#projects .project-info {
  padding: 30px;
  flex-basis: 50%;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
  color: white;
  height: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: column;
}

#projects .project-info h1 {
  font-size: 4rem;
  font-weight: 500;
}

#projects .project-info h2 {
  font-size: 1.8rem;
  font-weight: 300;
  margin-top: 10px;
}

#projects .project-info h2 a {
  color: crimson;
}

#projects .project-info p {
  color: white;
}

#projects .project-image {
  flex-basis: 50%;
  height: 300px;
  overflow: hidden;
  position: relative;
}

#projects .project-image::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
  opacity: 0.7;
}

#projects .project-image img {
  transition: 0.3s ease transform;
}

#projects .project-item:hover .project-image img {
  transform: scale(1.1);
}

/* End Of Projects Section */

/* About Section */

#about .about {
  flex-direction: column-reverse;
  text-align: center;
  max-width: 1100px;
  margin: 0 auto;
  padding: 100px 20px;
}

#about .col-left {
  width: 250px;
  height: 360px;
}

#about .col-left .about-image {
  height: 100%;
  width: 100%;
  position: relative;
  border: 10px solid white;
}

#about .col-left .about-image::after {
  content: "";
  position: absolute;
  top: 19px;
  left: -33px;
  height: 98%;
  width: 98%;
  border: 7px solid crimson;
  z-index: -1;
}

#about .col-right {
  width: 100%;
}

#about .col-right h2 {
  font-size: 1.8rem;
  font-weight: 500;
  letter-spacing: 0.2rem;
  margin-bottom: 10px;
}

#about .col-right p {
  margin-bottom: 20px;
}

#about .col-right .cta {
  color: black;
  margin-bottom: 50px;
  padding: 10px 20px;
  font-size: 2rem;
}

/* End Of About Section */

/* contact Section */
#contact .contact {
  flex-direction: column;
  max-width: 1200px;
  margin: 0 auto;
  width: 90%;
}

#contact .section-title {
  margin-bottom: 50px;
}

#contact .contact-items {
  width: 100%;
}

#contact .contact-item {
  width: 80%;
  padding: 20px;
  text-align: center;
  border-radius: 10px;
  padding: 30px;
  margin: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  box-shadow: 0px 0px 18px 0 #0000002c;
  transition: 0.3s ease box-shadow;
}

#contact .contact-item:hover {
  box-shadow: 0px 0px 5px 0 #0000002c;
}

#contact .icon {
  width: 70px;
  margin: 0 auto;
  margin-bottom: 10px;
}

#contact .contact-info h1 {
  font-size: 2.5rem;
  font-weight: 500;
  margin-bottom: 5px;
}

#contact .contact-info h2 {
  font-size: 1.3rem;
  line-height: 2rem;
  font-weight: 500;
}
/*End contact Section */

/* Footer Section */

#footer {
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
}

#footer .footer {
  min-height: 200px;
  flex-direction: column;
  padding-top: 50px;
  padding-bottom: 10px;
}

#footer h2 {
  color: white;
  font-weight: 500;
  font-size: 1.8rem;
  letter-spacing: 0.1rem;
  margin-top: 10px;
  margin-bottom: 10px;
}

#footer .social-icon {
  display: flex;
  margin-bottom: 30px;
}

#footer .social-item {
  height: 50px;
  width: 50px;
  margin: 0 5px;
}

#footer .social-item img {
  filter: grayscale(1);
  transition: 0.3s ease filter;
}

#footer .social-item img:hover {
  filter: grayscale(0);
}

/* End Of Footer Section */

/* Keyframes */

@keyframes text_reveal_box {
  50% {
    width: 100%;
    left: 0;
  }
  100% {
    width: 0%;
    left: 100%;
  }
}

@keyframes text_reveal {
  100% {
    color: white;
  }
}

@keyframes text_reveal_name {
  100% {
    color: crimson;
    font-weight: 500px;
  }
}

@keyframes hamburger_pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  100% {
    opacity: 0;
    transform: scale(1.3);
  }
}
/* ... */

